mostly working - except outline rendering